--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -102,4 +102,84 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_Pickup_Rifle.BP_Pickup_Rifle
+
+[DetailCategories]
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Networking=True
+StaticMeshActor.WorldPartition=True
+StaticMeshActor.Actor=True
+Test_C.Tick=True
+Test_C.Replication=True
+Test_C.Rendering=True
+Test_C.Collision=True
+Test_C.Actor=True
+Test_C.Input=True
+Test_C.HLOD=True
+Test_C.Physics=True
+Test_C.WorldPartition=True
+Test_C.Events=True
+
+[ContentBrowserRecent]
+MRUItem0=/Game/FirstPerson/Blueprints/BP_Pickup_Rifle
+MRUItem1=/Game/FirstPerson/Blueprints/Test
+
+[AssetEditorToolkitTabLocation]
+/Game/FirstPerson/Blueprints/Test.Test=1
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bEnableInputTriggerSupportWarnings=False
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+bDoubleClickNavigatesToParent=True
+bEnableTypePromotion=True
+TypePromotionPinDenyList=("string","text")
+BreakpointReloadMethod=RestoreAll
+bEnablePinValueInspectionTooltips=True
+bEnableNamespaceEditorFeatures=True
+bFavorPureCastNodes=False
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
 
